discussion/kv_engine/141636/141636_rev49_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39620: Use ifconfig in testapp [2.3/3]

Define the bootstrap interfaces in testapp and explicitly define
the other interfaces on top of those by using ifconfig

Change-Id: Iad7d4b960cdc85fed8a595621137a50c04b3026e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-11 17:18:27.000000000
Message: 
Uploaded patch set 49.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-11 18:14:11.000000000
Message: 
Patch Set 49: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36807/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0078/0096]: test MB-17517 CAS -1 DCP...(169 ms) OK


99% tests passed, 1 tests failed out of 407

Total Test time (real) = 349.23 sec

The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36807/ )

Timeout of a CTest test 407/407 Test #267: ep_testsuite_dcp.full_eviction.comp_passive ...................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36807/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9823/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10: error: "gtest/gtest.h" file not found [clang-diagnostic-error]
#include <gtest/gtest.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9823/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
error: "gtest/gtest.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9823/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8412/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/335/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31447/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10474/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11394/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11543/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11820/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19407/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
